crates/sparql-results/tests/snapshots/results_corpus__ask_true_json.snap
---
source: crates/sparql-results/tests/results_corpus.rs
expression: "text(&SparqlResult::Boolean(true), SparqlResultsFormat::Json,\n&ResultProvenance::default())"
---
{"head":{},"boolean":true}
