crates/sparql-results/tests/snapshots/results_corpus__ask_true_xml.snap
---
source: crates/sparql-results/tests/results_corpus.rs
expression: "text(&SparqlResult::Boolean(true), SparqlResultsFormat::Xml,\n&ResultProvenance::default())"
---
<?xml version="1.0"?>
<sparql xmlns="http://www.w3.org/2005/sparql-results#">
  <head></head>
  <boolean>true</boolean>
</sparql>
