crates/sparql-results/tests/snapshots/results_corpus__construct_starred_graph_json.snap
---
source: crates/sparql-results/tests/results_corpus.rs
expression: "text(&starred_graph(), SparqlResultsFormat::Json,\n&ResultProvenance::default())"
---
{"graph":"<http://example.org/book/book6> <http://purl.org/dc/elements/1.1/title> \"Harry Potter and the Half-Blood Prince\"^^<http://www.w3.org/2001/XMLSchema#string> .\n<http://example.org/stmt/stmt1> <http://example.org/vocab#source> <https://en.wikipedia.org/wiki/Half-Blood_Prince> .\n<http://example.org/stmt/stmt1> <http://www.w3.org/1999/02/22-rdf-syntax-ns#reifies> <<( <http://example.org/book/book6> <http://purl.org/dc/elements/1.1/title> \"Harry Potter and the Half-Blood Prince\"^^<http://www.w3.org/2001/XMLSchema#string> )>> .\n"}
