crates/sparql-results/tests/snapshots/results_corpus__edge_cases_csv.snap
---
source: crates/sparql-results/tests/results_corpus.rs
assertion_line: 399
expression: raw
---
term,note
مرحبا,right-to-left greeting
"a, ""b"" & <c>",hello
