crates/sparql-results/tests/snapshots/results_corpus__edge_cases_json.snap
---
source: crates/sparql-results/tests/results_corpus.rs
expression: "text(&edge_cases(), SparqlResultsFormat::Json, &ResultProvenance::default(),\n        None)"
---
{"head":{"vars":["term","note"]},"results":{"bindings":[{"term":{"type":"literal","value":"مرحبا","xml:lang":"ar","its:dir":"rtl"},"note":{"type":"literal","value":"right-to-left greeting","datatype":"http://www.w3.org/2001/XMLSchema#string"}},{"term":{"type":"literal","value":"a, \"b\" & <c>","datatype":"http://www.w3.org/2001/XMLSchema#string"},"note":{"type":"literal","value":"hello","xml:lang":"en","its:dir":"ltr"}}]}}
