crates/sparql-results/tests/snapshots/results_corpus__edge_cases_tsv.snap
---
source: crates/sparql-results/tests/results_corpus.rs
assertion_line: 421
expression: raw
---
?term	?note
"مرحبا"@ar--rtl	"right-to-left greeting"
"a, \"b\" & <c>"	"hello"@en--ltr
