crates/sparql-results/tests/snapshots/results_corpus__edge_cases_xml.snap
---
source: crates/sparql-results/tests/results_corpus.rs
expression: "text(&edge_cases(), SparqlResultsFormat::Xml, &ResultProvenance::default(),\nNone,)"
---
<?xml version="1.0"?>
<sparql xmlns="http://www.w3.org/2005/sparql-results#" xmlns:its="http://www.w3.org/2005/11/its" its:version="2.0">
  <head>
    <variable name="term"/>
    <variable name="note"/>
  </head>
  <results>
    <result>
      <binding name="term"><literal xml:lang="ar" its:dir="rtl">مرحبا</literal></binding>
      <binding name="note"><literal>right-to-left greeting</literal></binding>
    </result>
    <result>
      <binding name="term"><literal>a, "b" &amp; &lt;c&gt;</literal></binding>
      <binding name="note"><literal xml:lang="en" its:dir="ltr">hello</literal></binding>
    </result>
  </results>
</sparql>
