crates/sparql-results/tests/snapshots/results_corpus__select_books_csv.snap
---
source: crates/sparql-results/tests/results_corpus.rs
expression: "text(&books(), SparqlResultsFormat::Csv, &ResultProvenance::default())"
---
book,title
http://example.org/book/book6,Harry Potter and the Half-Blood Prince
http://example.org/book/book7,Harry Potter et l'Ordre du Phénix
,Anonymous Anthology
_:draft,5
