crates/sparql-results/tests/snapshots/results_corpus__select_books_json.snap
---
source: crates/sparql-results/tests/results_corpus.rs
expression: "text(&books(), SparqlResultsFormat::Json, &ResultProvenance::default(), None,)"
---
{"head":{"vars":["book","title"]},"results":{"bindings":[{"book":{"type":"uri","value":"http://example.org/book/book6"},"title":{"type":"literal","value":"Harry Potter and the Half-Blood Prince"}},{"book":{"type":"uri","value":"http://example.org/book/book7"},"title":{"type":"literal","value":"Harry Potter et l'Ordre du Phénix","xml:lang":"fr"}},{"title":{"type":"literal","value":"Anonymous Anthology"}},{"book":{"type":"bnode","value":"draft"},"title":{"type":"literal","value":"5","datatype":"http://www.w3.org/2001/XMLSchema#integer"}}]}}
